hphp/test/quick/hh_numbers.php.expectf

Fatal error: syntax error, unexpected T_HH_ERROR in %s on line 2
